Add ansible file and script for being able to execute the role by itself
Change-Id: I0f20e17da4a0d38439a4fc3a37655cd925313508

--- a/defaults/main.yml
+++ b/defaults/main.yml
@@ -28,7 +28,7 @@ overcloud_nodes:
 #  - { type: "ceph", name: "overcloud-cephstorage-0", ansible_name: "cephstorage" }
 
 oooq_vms_path: /var/oooqvms
-oooq_vms_pool_path: /var/oooqvms/pool
+oooq_vms_pool_path: "{{ oooq_vms_path }}/pool"
 oooq_tar_path: /tmp
 oooq_tar_name: tripleo.tar.gz
 
