Add ansible file and script for being able to execute the role by itself
Change-Id: I0f20e17da4a0d38439a4fc3a37655cd925313508

--- a/playbooks/restore.yml
+++ b/playbooks/restore.yml
@@ -1,26 +1,29 @@
 ---
 - name: Restore oooq deployment
   hosts: virthost
+  gather_facts: no
   tags:
     - tripleo-restore
   roles:
-    - { role: ansible-role-tripleo-backup,
+    - { role: tripleo-backup,
         restore: true }
 
 - name: Sanity checks the undercloud services
   hosts: undercloud
+  gather_facts: no
   tags:
     - tripleo-restore-uc-sanity
   roles:
-    - { role: ansible-role-tripleo-backup,
+    - { role: tripleo-backup,
         restore: true,
         services: ["keystone", "glance-api"] }
 
 - name: Sanity checks the overcloud services
   hosts: overcloud
+  gather_facts: no
   tags:
     - tripleo-restore-uc-sanity
   roles:
-    - { role: ansible-role-tripleo-backup,
+    - { role: tripleo-backup,
         restore: true,
         services: ["keystone", "glance-api", "neutron-server"] }
