Add ansible file and script for being able to execute the role by itself
Change-Id: I0f20e17da4a0d38439a4fc3a37655cd925313508

--- a/tasks/restore.yml
+++ b/tasks/restore.yml
@@ -19,7 +19,7 @@
 - name: untar tripleo vms
   shell: >
     tar -xzf {{ oooq_tar_path }}/{{ oooq_tar_name }};
-    mv var/oooqvms/ /var
+    mv var/oooqvms/* {{ oooq_vms_path }}
 
 - name: destroy network if exist
   ignore_errors: true
