--- a/playbooks/restore.yml
+++ b/playbooks/restore.yml
@@ -16,8 +16,8 @@
     - tripleo-restore-uc-sanity
   roles:
     - { role: tripleo-backup,
-        restore: true,
-        services: ["keystone", "glance-api"] }
+        sanity: true,
+        services: ["openstack-keystone", "openstack-glance-api"] }
 
 - name: Sanity checks the overcloud services
   hosts: overcloud
@@ -26,5 +26,5 @@
     - tripleo-restore-uc-sanity
   roles:
     - { role: tripleo-backup,
-        restore: true,
-        services: ["keystone", "glance-api", "neutron-server"] }
+        sanity: true,
+        services: ["openstack-keystone", "openstack-glance-api", "neutron-server"] }
