get undercloud ip, fetch ansible file and make sanity checks
Change-Id: Ife669cd738c448ae6a4c03d90df92d1150ceb576

--- a/tasks/main.yml
+++ b/tasks/main.yml
@@ -1,22 +1,27 @@
----
-- include: backup.yml
-  when: backup
-  tags:
-    - tripleo-backup
+#---
+#- include: backup.yml
+#  when: backup
+#  tags:
+#    - tripleo-backup
 
-# Note: the upload task is set in a dedicated tasks file since in a degraded env
-# (slow network connectivity for example) we don't want to fetch and upload
-- include: upload.yml
-  when: upload
-  tags:
-    - tripleo-upload
+## Note: the upload task is set in a dedicated tasks file since in a degraded env
+## (slow network connectivity for example) we don't want to fetch and upload
+#- include: upload.yml
+#  when: upload
+#  tags:
+#    - tripleo-upload
 
-- include: restore.yml
+#- include: restore.yml
+#  when: restore
+#  tags:
+#    - tripleo-restore
+
+- include: jenkins.yml
   when: restore
   tags:
-    - tripleo-restore
+    - tripleo-jenkins
 
 - include: sanity.yml
-  when: restore
+  when: sanity
   tags:
     - tripleo-restore-sanity
