--- a/defaults/main.yml
+++ b/defaults/main.yml
@@ -1,8 +1,8 @@
 ---
 # defaults file for tripleo-backup
 local_working_dir: "{{ lookup('env', 'HOME') }}/.quickstart"
-virthost: "{{ lookup('env', 'VIRTHOST') }}"
-undercloud_ip: "{{ lookup('env', 'UNDERCLOUD_IP') }}"
+virthost: "$VIRTHOST"
+undercloud_ip: "$UC_IP"
 
 oooq_files:
   - { file: "id_rsa_undercloud", mode: 600 }
@@ -40,6 +40,7 @@ networks_name:
 backup: false
 restore: false
 upload: false
+sanity: false
 
 services:
   - neutron-server
@@ -54,3 +55,5 @@ proto: http
 # this option allow user to directly upload the backup, instead of fetching the
 # file before. With some security context, both use case can be needed
 direct_upload: false
+
+oooq_cird: 192.168.23
