Add a pause for let the undercloud pause
Change-Id: I4a3e2c7c2a21792d2aa2aa27182f96ae479afd96

--- a/tasks/restore.yml
+++ b/tasks/restore.yml
@@ -66,3 +66,6 @@
   shell: >
     virsh create {{ oooq_vms_path }}/{{ item }}.xml
   with_items: "{{ vms }}"
+
+- name: pause for let the undercloud boot
+  pause: seconds=30
