add sanity play and add variable for virthost user
Change-Id: Ibaa281945de4e75dc5063af7fadd4b3ccfc9e49b

--- a/defaults/main.yml
+++ b/defaults/main.yml
@@ -2,6 +2,7 @@
 # defaults file for tripleo-backup
 local_working_dir: "{{ lookup('env', 'HOME') }}/.quickstart"
 virthost: "$VIRTHOST"
+virthost_user: root
 undercloud_ip: "$UC_IP"
 
 oooq_files:
