fix ssh config file for virthost
Change-Id: Iff961c3ae13c4614997d07a081fb9552a32e7568

--- a/defaults/main.yml
+++ b/defaults/main.yml
@@ -3,6 +3,7 @@
 local_working_dir: "{{ lookup('env', 'HOME') }}/.quickstart"
 virthost: "$VIRTHOST"
 virthost_user: root
+virthost_key: "~/.ssh/id_rsa"
 undercloud_ip: "$UC_IP"
 
 oooq_files:
