--- a/tasks/jenkins.yml
+++ b/tasks/jenkins.yml
@@ -1,6 +1,9 @@
 ---
 - name: get the undercloud ip
   register: undercloudip
+  until: undercloudip.stdout != ''
+  retries: 8
+  delay: 10
   shell: >
     arp -n | grep {{ oooq_cird }} | awk '{ print $1 }'
 
