--- a/playbooks/sanity.yml
+++ b/playbooks/sanity.yml
@@ -7,14 +7,14 @@
   roles:
     - { role: tripleo-backup,
         sanity: true,
-        services: ["openstack-keystone", "openstack-glance-api"] }
+        services: ["openstack-glance-api"] }
 
 - name: Sanity checks the overcloud services
   hosts: overcloud
   gather_facts: no
   tags:
-    - tripleo-restore-uc-sanity
+    - tripleo-restore-oc-sanity
   roles:
     - { role: tripleo-backup,
         sanity: true,
-        services: ["openstack-keystone", "openstack-glance-api", "neutron-server"] }
+        services: ["openstack-glance-api", "neutron-server"] }
