create ssh config file if does not exist
Change-Id: I3581ecb74868a5704588ff1768ff83764e709eca

--- a/playbooks/sanity.yml
+++ b/playbooks/sanity.yml
@@ -10,7 +10,7 @@
         services: ["openstack-glance-api"] }
 
 - name: Sanity checks the overcloud services
-  hosts: overcloud
+  hosts: controller
   gather_facts: no
   tags:
     - tripleo-restore-oc-sanity
