fix libvirt service name
Change-Id: I54c69f313427b66f2403b171446e801b9f6934c0

--- a/tasks/restore.yml
+++ b/tasks/restore.yml
@@ -6,8 +6,8 @@
     - qemu-kvm
     - net-tools
 
-- name: make sure libvirt is started
-  service: name=libvirt state=started
+- name: make sure libvirtd is started
+  service: name=libvirtd state=started
 
 # @TODO matbu: make a teardown set of tasks and tags
 - name: destroy vms
