get the undercloud ip by the mac address and not with the cidr
Change-Id: I800b4127fcca208d156825107a4b60b3bf759515

--- a/tasks/jenkins.yml
+++ b/tasks/jenkins.yml
@@ -5,7 +5,9 @@
   retries: 30
   delay: 10
   shell: >
-    arp -n | grep {{ oooq_cird }} | awk '{ print $1 }'
+    for i in $(virsh dumpxml undercloud | grep 'mac address'  | cut -f 2 -d "'"); do
+        arp -n | grep $i |  awk '{ print $1 }';
+    done
 
 - name: set fact for undercloud ip
   set_fact: undercloud_ip={{ undercloudip.stdout }}
