--- a/tasks/restore.yml
+++ b/tasks/restore.yml
@@ -44,11 +44,13 @@
   become: true
 
 - name: download tar file
+  register: download
   get_url:
     url: "{{ proto }}://{{ http_server }}/{{ http_path }}/{{ oooq_tar_name }}"
     dest: "{{ oooq_tar_path }}"
 
 - name: untar tripleo vms
+  when: download.changed|bool
   unarchive:
     src: "{{ oooq_tar_path }}/{{ oooq_tar_name }}"
     dest: "/"
