--- a/tasks/jenkins.yml
+++ b/tasks/jenkins.yml
@@ -5,9 +5,8 @@
   retries: 30
   delay: 10
   shell: >
-    for i in $(virsh dumpxml undercloud | grep 'mac address'  | cut -f 2 -d "'"); do
-        arp -n | grep $i |  awk '{ print $1 }';
-    done
+    ip=$(virsh dumpxml undercloud | awk -F "'" '/mac address/ { print $2; exit }');
+    ip neigh | grep $ip |  awk '{ print $1 }';
 
 - name: set fact for undercloud ip
   set_fact: undercloud_ip={{ undercloudip.stdout }}
