--- a/tasks/restore.yml
+++ b/tasks/restore.yml
@@ -9,6 +9,12 @@
 - name: make sure libvirtd is started
   service: name=libvirtd state=started
 
+- name: remove tripleo vms working dir
+  file:
+    path: "{{ oooq_vms_path }}"
+    state: absent
+  become: true
+
 # @TODO matbu: make a teardown set of tasks and tags
 - name: destroy vms
   ignore_errors: true
@@ -47,10 +53,14 @@
   when: download.changed|bool
   unarchive:
     src: "{{ oooq_tar_path }}/{{ oooq_tar_name }}"
-    dest: "/"
+    dest: "/tmp"
     copy: no
 # @TODO: matbu test out this rather than fetch and untar
 #    src: "{{ proto }}://{{ http_server }}/{{ http_path }}/{{ oooq_tar_name }}"
+
+- name: move oooq file
+  shell: >
+    mv /tmp/var/oooqvms {{ oooq_vms_path }}
 
 - name: create oooq_pool
   shell: >
