Undefine pool if it is inactive
Change-Id: I3a4913bb8f44c47fee3921dca357639e26282f1f

--- a/tasks/restore.yml
+++ b/tasks/restore.yml
@@ -32,6 +32,11 @@
         virsh net-undefine {{ item }}
     fi
 
+- name: undefine pool
+  ignore_errors: true
+  shell: >
+    virsh pool-undefine {{ pool_name }}
+
 - name: destroy pool
   ignore_errors: true
   shell: >
