minor fixes to restore
Change-Id: I36ef0f956bebf829bdebfc6b0af44ef201499487

--- a/tasks/restore.yml
+++ b/tasks/restore.yml
@@ -54,7 +54,7 @@
   register: download
   get_url:
     url: "{{ proto }}://{{ http_server }}/{{ http_path }}/{{ oooq_tar_name }}"
-    dest: "{{ oooq_tar_path }}"
+    dest: "{{ oooq_tar_path }}/{{ oooq_tar_name }}"
 
 - name: test if oooq tmp tar dir is present
   register: test_dir
