[WIP] enable ooo-snap to run w/ quickstart.sh
* enable ooo-snap to run w/ quickstart.sh.  Add the virthost via a task
removes the need to have a hardcoded hosts file.

* hitting some issues w/ untarring the image

Change-Id: I2dba310c5259c5f513df2a476042e76b7b61aa88

--- a/defaults/main.yml
+++ b/defaults/main.yml
@@ -50,6 +50,7 @@ upload: false
 # a job at the end of the restore.
 restore_config: false
 sanity: false
+clean_up: false
 
 services:
   - neutron-server
