--- a/setup.cfg
+++ b/setup.cfg
@@ -1,10 +1,10 @@
 [metadata]
-name = tripleo-overcloud-upgrade
-summary = tripleo-overcloud-upgrade - A ansible role for backup a ooop deployment
+name = ansible-role-tripleo-backup
+summary = ansible-role-tripleo-backup - A ansible role for deploying a tripleo overcloud
 description-file =
     README.md
 author = RDO-CI Team
-author-email = mbultel@redhat.com
+author-email = mbultel@redhat.com, whayutin@redhat.com
 home-page = https://github.com/redhat-openstack/ansible-role-tripleo-backup
 classifier =
   License :: OSI Approved :: Apache Software License
@@ -25,9 +25,11 @@ data_files =
     usr/local/share/ansible/roles/tripleo-backup/meta = meta/*
     usr/local/share/ansible/roles/tripleo-backup/tasks = tasks/*
     usr/local/share/ansible/roles/tripleo-backup/templates = templates/*
+    usr/local/share/ansible/roles/tripleo-backup/files = files/*
     usr/local/share/ansible/roles/tripleo-backup/tests = tests/*
     usr/local/share/ansible/roles/tripleo-backup/vars = vars/*
     playbooks = playbooks/*
+    config = config/*
 
 [wheel]
 universal = 1
