--- a/playbooks/sanity.yml
+++ b/playbooks/sanity.yml
@@ -1,4 +1,17 @@
 ---
+# Add the virthost to the in-memory inventory. The inventory is not
+# written out to disk unless you call the `tripleo-inventory` role.
+- name: Add the virthost to the inventory
+  hosts: localhost
+  tasks:
+    - name: Add virthost
+      add_host:
+        name: "{{virthost}}"
+        groups: "virthost"
+        ansible_fqdn: "{{ virthost }}"
+        ansible_user: "root"
+        ansible_host: "{{ virthost }}"
+
 - name: Sanity checks the undercloud services
   hosts: undercloud
   gather_facts: no
