--- a/setup.cfg
+++ b/setup.cfg
@@ -28,6 +28,7 @@ data_files =
     usr/local/share/ansible/roles/tripleo-backup/tests = tests/*
     usr/local/share/ansible/roles/tripleo-backup/vars = vars/*
     playbooks = playbooks/*
+    config = config/*
 
 [wheel]
 universal = 1
