--- a/setup.cfg
+++ b/setup.cfg
@@ -1,6 +1,6 @@
 [metadata]
-name = tripleo-overcloud-upgrade
-summary = tripleo-overcloud-upgrade - A ansible role for backup a ooop deployment
+name = ansible-role-tripleo-backup
+summary = ansible-role-tripleo-backup - A ansible role for backup a ooop deployment
 description-file =
     README.md
 author = RDO-CI Team
@@ -28,6 +28,7 @@ data_files =
     usr/local/share/ansible/roles/tripleo-backup/tests = tests/*
     usr/local/share/ansible/roles/tripleo-backup/vars = vars/*
     playbooks = playbooks/*
+    config = config/*
 
 [wheel]
 universal = 1
