[WIP] enable ooo-snap to run w/ quickstart.sh
* enable ooo-snap to run w/ quickstart.sh.  Add the virthost via a task
removes the need to have a hardcoded hosts file.

* hitting some issues w/ untarring the image

Change-Id: I2dba310c5259c5f513df2a476042e76b7b61aa88

--- a/tasks/restore.yml
+++ b/tasks/restore.yml
@@ -44,12 +44,6 @@
     rm -f /var/run/libvirt/storage/{{ pool_name }}.xml;
     systemctl restart libvirtd
 
-- name: create tripleo vms working dir
-  file:
-    path: "{{ oooq_tar_path }}"
-    state: directory
-  become: true
-
 - name: download tar file
   register: download
   get_url:
@@ -60,14 +54,21 @@
   register: test_dir
   ignore_errors: true
   shell: >
-    test -d /tmp/var/oooqvms
+    test -d "{{ oooq_tar_path }}/var/oooqvms"
+
+- name: create tripleo vms working dir
+  when: test_dir.rc != 0
+  file:
+    path: "{{ oooq_tar_path }}"
+    state: directory
+  become: true
 
 - name: untar tripleo vms
-  when: download.changed|bool or test_dir.rc == 1
-  unarchive:
-    src: "{{ oooq_tar_path }}/{{ oooq_tar_name }}"
-    dest: "/tmp"
-    copy: no
+  when: download.changed|bool or test_dir.rc != 0
+  shell: >
+    pushd "{{ oooq_tar_path }}";
+    tar -xvzf "{{ oooq_tar_name }}"
+
 # @TODO: matbu test out this rather than fetch and untar
 #    src: "{{ proto }}://{{ http_server }}/{{ http_path }}/{{ oooq_tar_name }}"
 
@@ -88,3 +89,14 @@
   shell: >
     virsh create {{ oooq_vms_path }}/{{ item }}.xml
   with_items: "{{ vms }}"
+
+- name: check for ssh config args in ansible.cfg
+  register: ssh_args
+  ignore_errors: true
+  shell: >
+    grep ssh.config.ansible ansible.cfg
+
+- name: add ssh_args to ansible.cfg if missing
+  when: ssh_args != 0
+  shell: >
+    echo "ssh_args = -F ssh.config.ansible" >> ansible.cfg
