--- a/tasks/restore.yml
+++ b/tasks/restore.yml
@@ -44,12 +44,6 @@
     rm -f /var/run/libvirt/storage/{{ pool_name }}.xml;
     systemctl restart libvirtd
 
-- name: create tripleo vms working dir
-  file:
-    path: "{{ oooq_tar_path }}"
-    state: directory
-  become: true
-
 - name: download tar file
   register: download
   get_url:
@@ -60,14 +54,21 @@
   register: test_dir
   ignore_errors: true
   shell: >
-    test -d /tmp/var/oooqvms
+    test -d "{{ oooq_tar_path }}/var/oooqvms"
+
+- name: create tripleo vms working dir
+  when: test_dir.rc != 0
+  file:
+    path: "{{ oooq_tar_path }}"
+    state: directory
+  become: true
 
 - name: untar tripleo vms
-  when: download.changed|bool or test_dir.rc == 1
-  unarchive:
-    src: "{{ oooq_tar_path }}/{{ oooq_tar_name }}"
-    dest: "/tmp"
-    copy: no
+  when: download.changed|bool or test_dir.rc != 0
+  shell: >
+    pushd "{{ oooq_tar_path }}";
+    tar -xvzf "{{ oooq_tar_name }}"
+
 # @TODO: matbu test out this rather than fetch and untar
 #    src: "{{ proto }}://{{ http_server }}/{{ http_path }}/{{ oooq_tar_name }}"
 
