Make sure vms are shut off before backup them
We need to make sure that the vms are really down
before tar and backup them.
This cause some failure with the undercloud, which is
pretty slow to go down

In order to do that we also need to run the playbook
with stack user instead of root

Change-Id: Ia6626eb373f98af7ab12fdee476487d0d9e5cadb

--- a/tasks/backup.yml
+++ b/tasks/backup.yml
@@ -2,7 +2,17 @@
 - name: stop oooq vms
   ignore_errors: true
   shell: >
+    virsh shutdown {{ item }};
     virsh destroy {{ item }}
+  with_items: "{{ vms }}"
+
+- name: wait until vm is down
+  register: vmstate
+  until: vmstate.stdout != 'running'
+  retries: 30
+  delay: 10
+  shell: >
+    virsh list --all | grep {{ item }} |awk '{ print $3; }'
   with_items: "{{ vms }}"
 
 - name: remove tripleo vms working dir
