--- a/project.config
+++ b/project.config
@@ -3,12 +3,19 @@
 [access "refs/*"]
 	owner = group user/mathieu bultel (matbu)
 [access "refs/for/refs/*"]
+	read = group oooq-core
 	read = group user/mathieu bultel (matbu)
+	push = group oooq-core
 	push = group user/mathieu bultel (matbu)
+	label-Code-Review = -2..+2 group oooq-core
 	label-Code-Review = -2..+2 group user/mathieu bultel (matbu)
+	label-Verified = -1..+1 group oooq-core
 	label-Verified = -1..+1 group user/mathieu bultel (matbu)
+	rebase = group oooq-core
 	rebase = group user/mathieu bultel (matbu)
+	removeReviewer = group oooq-core
 	removeReviewer = group user/mathieu bultel (matbu)
+	submit = group oooq-core
 	submit = group user/mathieu bultel (matbu)
 [access "refs/heads/*"]
 	read = group user/mathieu bultel (matbu)
