--- a/project.config
+++ b/project.config
@@ -1,6 +1,7 @@
 [access]
 	inheritFrom = All-Projects
 [access "refs/*"]
+	owner = group oooq-core
 	owner = group user/mathieu bultel (matbu)
 [access "refs/for/refs/*"]
 	read = group oooq-core
